extras/np/backend_ingress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
 name: backend-ingress-policy
 namespace: test
spec: 
 podSelector: 
  matchLabels: 
   run: backend  
 policyTypes: 
 - Ingress
 ingress: 
 - from: 
   - podSelector: 
      matchLabels: 
       run: frontend
