extras/np/default-deny-cassandra.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
 name: default-deny-cassandra
 namespace: cassandra
spec: 
 podSelector: {}
 policyTypes: 
 - Ingress
 - Egress
