extras/np/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
 name: default-deny
 namespace: test
spec: 
 podSelector: {}
 policyTypes: 
 - Ingress
 - Egress
